--- a/app.css
+++ b/app.css
@@ -91,6 +91,20 @@ button:active {
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.26);
   padding: 1rem;
   margin: 1rem;
+  background: white;
+}
+
+.projects li:hover {
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+.projects li.grabbing {
+
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+
+
 }
 
 .projects li h2 {
